examples/test/testpolicy17385.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17385
  namespace: namespace363
spec:
  podSelector:
    matchLabels:
      key45: value21
      key16: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value32
          key4: value26
      podSelector:
        matchLabels:
          key29: value36
          key49: value26
